--- a/main.html
+++ b/main.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -18,5 +17,4 @@
 </script>
 
 </body>
-
 </html>
